fix: domain name resolution error on MACOSFix domain name resolution error on MACOS